[package]
name = "remote_invoke_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common
anyhow = "^1.0"
tokio = { version = "^1.35", features = ["rt-multi-thread", "macros", "fs"] }
log = "~0.4"
env_logger = "~0.10"
# Network
reqwest = { version = "~0.11", features = ["stream"] }
bytes = "^1.5"
variable-len-reader = "~0.3"
futures-util = "~0.3"
md-5 = "~0.10"
# Helpful
open = "^5.0"
